--- a/elements/oe-feel-element-list.html
+++ b/elements/oe-feel-element-list.html
@@ -62,7 +62,7 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                     </div>
                 </template>
                 <hr>
-                <template is="dom-repeat" items="{{associations}}">
+                <!-- <template is="dom-repeat" items="{{associations}}">
                     <div class="association" draggable="true" title="[[item.name]]" on-click="raiseConnect">
                         <iron-icon icon="oe-feel-icons:[[item.type]]"></iron-icon>
                         <div class="hover-display layout horizontal center justified">
@@ -70,7 +70,7 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                             <label>[[item.name]]</label>
                         </div>
                     </div>
-                </template>
+                </template> -->
             </div>
         </div>
     </template>
